# postgres-fts-polish

./: .editorconfig  Cargo.toml  README.md
.github/workflows/: release.yml
src/: db.rs  main.rs  sjp.rs
