[package]
name = "postgres-fts-polish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
bzip2 = "0.4.3"
clap = { version = "4.0.29", features = ["derive"] }
encoding_rs = "0.8.32"
flate2 = "1.0.25"
postgres = "0.19.4"
reqwest = { version = "0.11.13", features = ["blocking"] }
tar = "0.4.38"
